--- a/home.css
+++ b/home.css
@@ -3,6 +3,8 @@ body {
   text-align: center;
   padding: 0px 100px;
   background-color: white;
+  min-width: 200px;
+  max-width: 800px;
 }
 .container{
   position: relative;
