--- a/home.css
+++ b/home.css
@@ -20,7 +20,7 @@ body {
 
 .container .section:nth-child(1n+2)
 {
-  padding: 100px 0px 0px 0px;
+  padding: 5.3% 0% 0% 0%;
   background-color: white;
   background-size: cover;
 }
@@ -32,8 +32,8 @@ p{
 }
 
 h1{
-  font-size: 100px;
-  padding: 210px 200px;
+  font-size: 600%;
+  padding: 15% 10%;
 
 }
 
@@ -71,11 +71,9 @@ a{
   padding: 10px;
 }
 img{
-  
-  width: 1000px;
-  height: 400px;
-  padding: 50px;
-  
+  width: 80%;
+  height: 50%;
+  padding: 6%;
   border: 1px solid black;
 }
 #logo{
