--- a/home.css
+++ b/home.css
@@ -1,7 +1,7 @@
 body {
   font-family: 'Poiret One', cursive;
   text-align: center;
-  padding: 0px 100px;
+  padding: 0% 8%;
   background-color: white;
 }
 .container{
@@ -26,9 +26,9 @@ body {
 }
 
 p{
-  font-size: 40px;
+  font-size: 250%;
   text-align: left;
-  padding: 90px 0px 30px 30px;
+  padding-top: 9%;
 }
 
 h1{
@@ -39,10 +39,10 @@ h1{
 
 .menu{
   display: inline;
-  font-size: 20px;
+  font-size: 130%;
   color: black;
   letter-spacing: 3px;
-  padding:50px;
+  padding:3%;
 }
 ul li a
 {
@@ -68,7 +68,7 @@ ul li a:hover
 a{
   color: black;
   text-decoration: none;
-  padding: 10px;
+  padding: 1%;
 }
 img{
   width: 80%;
