--- a/VolunteerWorks.css
+++ b/VolunteerWorks.css
@@ -1,8 +1,13 @@
 body {
   font-family: 'Poiret One', cursive;
   text-align: center;
-  padding: 0px 100px;
+  padding: 0% 5%;
   background-color: white;
+}
+#instruct{
+  font-size: 500%;
+  opacity: 0.5;
+  background-color: none;
 }
 
 #logo{
@@ -49,12 +54,13 @@ a{
 
 h1{
   text-align: left;
-  padding: 50px 0px 0px 0px;
+  font-size: 350%
+  padding: 10%;
   background-color: #FCBCBC;
 }
 
 p{
-  font-size: 30px;
+  font-size: 300%;
   background-color: #CFEEF7;
 }
 
@@ -74,33 +80,34 @@ p{
 
 .container .section:nth-child(1)
 {
-  padding: 100px 0px 0px 0px;
+  padding-top: : 40%;
   background-color: white;
   background-size: cover;
 }
 .container .section:nth-child(2)
 {
-  padding: 100px 0px 0px 0px;
+  padding-top: 15%;
   background-size: cover;
   background-color: white;
 }
 .container .section:nth-child(3)
 {
   background: url(volunteer1.jpg);
-  background-size: cover;
+  background-size: 100%;
+
 }
 .container .section:nth-child(4)
 {
   background: url(volunteer2.jpg);
-  background-size: cover;
+  background-size: 100%;
 }
 .container .section:nth-child(5)
 {
   background: url(volunteer3.jpg);
-  background-size: cover;
+  background-size: 100%;
 }
 .container .section:nth-child(6)
 {
   background: url(worksheet.jpg);
-  background-size: cover;
+  background-size: 100%;
 }
