--- a/Exhibitions.css
+++ b/Exhibitions.css
@@ -27,7 +27,6 @@ img {
 }
 
 .title {
-  font-family: "Times New Roman";
   font-size: 270%;
   max-width: 100%
 }
@@ -42,17 +41,24 @@ p {
 body {
   font-family: 'Poiret One', cursive;
   text-align: center;
-  padding: 0px 100px;
+  padding: 0 100px;
+  padding-bottom: 10%;
   background-color: white;
 }
-
+.link
+{
+  display: inline;
+  font-size: 20px;
+  color: black;
+  letter-spacing: 3px;
+  padding: 15% 5%;
+}
 #logo{
   width: 300px;
   height: 70px;
   padding: 60px;
   border: none;
   border-radius: 0px;
-  padding: 60px;
   display: block;
   margin-left: 34%;
 }
